--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
     <string name="app_name">Fall2What</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="wifi_label">Wi - Fi </string>
+    <string name="bluetooth_label">Bluetooth</string>
+    <string name="mode_1_label">Mode 1</string>
+    <string name="mode_2_label">Mode 2</string>
+    <string name="search_Label">Search</string>
+    <string name="start_Label">Start</string>
+    <string name="play_label">Play</string>
+    <string name="shop_label">Shop</string>
+    <string name="fx_label">Sound Effect</string>
+    <string name="sound_label">Music</string>
 </resources>
