--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,10 @@
     <string name="reset_app_label">Reset</string>
     <string name="ip_text_label">IP</string>
 
+    <string name="skill_1_label">Skill 1</string>
+    <string name="skill_2_label">Skill 2</string>
+    <string name="choose_confirmPg">Confirm</string>
+
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_choose_pg">ChoosePgActivity</string>
